# conductor

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: release.yml
hooks/scripts/: signal-active.sh  signal-waiting.sh
mcp/conductor-comment/: package-lock.json  package.json
mcp/conductor-comment/src/: index.ts
plugins/conductor/: .mcp.json
plugins/conductor/.claude-plugin/: plugin.json
plugins/conductor/commands/: address-conductor-comment.md
plugins/conductor/hooks/: hooks.json
plugins/conductor/hooks/scripts/: signal-waiting.sh
plugins/conductor/mcp/conductor-comment/: package-lock.json  package.json
plugins/conductor/mcp/conductor-comment/src/: index.ts
src/: app.rs  background.rs  ccusage_cache.rs  claude_sessions.rs  command_palette.rs  config.rs  diff_state.rs  event.rs  file_watcher.rs  git_engine.rs  grep_search.rs  keymap.rs  main.rs  overlay.rs  pty_manager.rs  review_state.rs  review_store.rs  terminal_state.rs  text_input.rs  theme.rs  update_checker.rs  viewer_state.rs  worktree_ops.rs
src/event/: explorer.rs  global.rs  mod.rs  mouse.rs  overlay.rs  terminal.rs  viewer.rs  worktree.rs
src/ui/: common.rs  dashboard.rs  decoration.rs  explorer_panel.rs  grep_search.rs  mod.rs  review.rs  terminal_claude.rs  terminal_shell.rs  viewer_panel.rs  worktree_panel.rs
src/viewer/: file_tree.rs  file_view.rs  mod.rs
