[package]
name = "conductor"
version = "0.13.1"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = { version = "0.19", features = ["vendored-openssl"] }
rusqlite = { version = "0.32", features = ["bundled"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }
syntect-tui = "3"
similar = { version = "2", features = ["inline"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6"
copypasta = "0.10"
log = "0.4"
env_logger = "0.11"
notify = "7"
unicode-width = "0.2"
vt100 = "0.15"
open = "5"
regex = "1"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
